feat: add receipt scan feature
